# xite

./: INSTALL  Makefile.am  Makefile.def  README  README.Debian  configure.ac  techstack.md  techstack.yml
lib/Image/: Image.c  ImageBytePix.h  ImageComplexPix.h  ImageDoubleComplexPix.h  ImageDoublePix.h  ImageFormat.c  ImageLongPix.h  ImageOverlayPix.h  ImageShortPix.h  Makefile.am
lib/binarize/: Makefile.am  bin_be.c  bin_etm.c  bin_man.c  bin_mh.c  bin_nr.c  bin_ot.c  bin_tfj.c  bin_wr1.c  bin_wr2.c  bin_yb.c  k_means.c  reg_smooth.c  remove_ghost.c  write_band.c
lib/canny/: Makefile.am  canny.c
lib/convolve/: Makefile.am  conv3x3.c  convolve.c  crossing.c  gradient_op.c  lapZeroCross.c  prewitt.c
lib/extrema/: Makefile.am  extrema2.c  minima.c
lib/fft/: Makefile.am  dint.c
lib/fht/: Makefile.am  fht2d.c
lib/geometry/: Makefile.am  shift_img.c  warp.c
lib/haar/: Makefile.am  haar1d.c  haar2d.c  haarTexture.c
lib/minmax/: Makefile.am  closestMinMax.c
lib/morph/: Makefile.am  morphDilate.c
lib/pyramid/: Makefile.am
lib/statistics/: Makefile.am  histoMeanStd.c
lib/texture/: Makefile.am  glcm.c  glcmParameter.c  peanoScan.c
lib/threshold/: Makefile.am  thresOtsu.c  thresRidCal.c  thresSigma.c  threshold.c
lib/tiff/: Makefile.am
src/: AUTHORS  INSTALL  LICENSE  Makefile.am  Makefile.def  Makefile.def.in  README.Debian  README.SuSE  README.SuSE10  configure.ac  install_xite  install_xite_IRIX
src/PostScript/: Makefile.am
src/arithmetic/: Makefile.am  addw_main.c  average_main.c  crossSection_main.c  imag_main.c  logarithm_main.c  logical_main.c  phase_main.c  rms_main.c  squareRoot_main.c  xadd_main.c
src/binarize/: Makefile.defs  expand_edge_main.c  mark_object.c
src/build-aux/: autogen.sh
src/cdoc/: Makefile.am  cdoc_main.c
src/color/: colorquant_main.c  makepseudo.sh  saturmod_main.c
src/combine/: Makefile.defs  combine_main.c
src/contour/: Makefile.am  Makefile.defs
src/convert/: ascii2biff_main.c  biff2ascii_main.c  biff2raw_main.c  biffConvert_main.c  pseudo2rgb_main.c  raw2biff_main.c
src/convolve/: Makefile.am  conv3x3_main.c  grad_main.c  gradient_op.c  lapZeroCross_main.c  roberts_main.c  sobel_main.c
src/copy/: Makefile.defs  biffDump_main.c
src/data/img/: Makefile.am  mask.img  mona2.img  reine_pseudo.img
src/data/xshow/: Makefile.am  black.map  black.ovl.map  blue.col  blue.map  comp_n  comp_ne  comp_nw  comp_w  green.col  hue1.col  hue1.map  laplace9  rainbow.col  rainbow.map  red.col  spectrum.col  white.col  (+1 more)
src/debian/: README.Debian  changelog  control  copyright  docs  install_xite_Debian.patch  libfwf-dev.files  libfwf-dev.install  libfwf.files  libfwf.install  libxite-dev.dirs  libxite-dev.files  libxite-dev.install  libxite.files  libxite.install  libxite3-dev.dirs  libxite3-dev.install  libxite3.install  makeMakefile_debug.patch  makeMakefile_no_rpath.patch  menu.ex  netpbm10.patch  pentium4.patch  postinst  postrm  preinst  prerm  rules  startProg.patch  xite-doc.doc-base  xite-doc.doc-base.overview  xite-doc.docs  xite-overview.doc-base  xite-programmers-manual.doc-base  xite-reference-manual.doc-base  xite.conffiles  xite.dirs  xite.files  xite.install  xite.lintian-overrides  (+1 more)
src/dic2biff/: read_dic.c
src/dither/: Makefile.am
src/doc/: BUGS  WHAT_IS_XITE.html  bugs.html
src/draw/: Makefile.defs  biffwrite_main.c
src/etc/: FUNC_PROG_LIST  benchmark  emacs-header  makexite.tmpl  makexite_remote  mandesc  xite_cshrc.tmpl
src/extrema/: Makefile.am  Makefile.defs  minima_main.c
src/fft/: Makefile.am  Makefile.defs  fftImag.sh  fftMagPhase_main.c  fftMakeBs.sh  fftMakeHp.sh  fftMakeLp.sh  fftPower.sh
src/fht/: fht2d_main.c  fhtPhase_main.c
src/fractal/: minmaxTexture_main.c
src/geometry/: Makefile.defs  affine_main.c  rotate_main.c  transpose_img_main.c  warpExAnalysis.sh  warp_main.c
src/gradInv/: Makefile.am  gradInv_main.c
src/haar/: Makefile.defs  haar2d_main.c  haarTexture_main.c
src/histo/: Makefile.am  gammaAdjust_main.c  histoEq_main.c  mkHisto_main.c
src/hough/: houghLine_main.c
src/ideal/: bandstop_main.c  exponential_main.c  lowpassIdeal_main.c  lowpass_main.c  xfilter_main.c
src/ihs/: Makefile.defs  ihs2rgb_main.c  rainbow_main.c  rgb2ihs_main.c
src/include/: Makefile.am
src/kncn/: kncn_main.c
src/knn/: Makefile.am  knn_main.c  mbknn_main.c
src/lib/: Makefile.am
src/matlab/: Makefile.am
src/median/: Makefile.defs  fractile_main.c  lit_main.c  maxHisto_main.c  pseudomedian3x3_main.c  rank_main.c
src/minmax/: Makefile.am
src/morph/: Makefile.am  Makefile.defs  morphClose_main.c
src/negate/: Makefile.am  absValue_main.c  complexConjug_main.c  negate_main.c
src/noise/: Makefile.am  addPoisson_main.c  multGauss_main.c
src/pnm/: Makefile.am
src/principal/: linearTrans_main.c
src/pyramid/: Makefile.defs  pyramid_main.c  xpyramid_main.c
src/region/: Makefile.defs  regionAnalyse_main.c  xregion_main.c
src/resample/: Makefile.am
src/rpm/: build  install_xite_rpm.patch  xite-3.4.4-x86_64.spec  xite-3.4.4.spec
src/scatter/: Makefile.defs
src/scripts/: Makefile.defs  cxite.sh  startProg.sh  xiteEcho.sh
src/segmentation/: Makefile.am
src/sigma/: Makefile.am
src/snn/: Makefile.am  litSnn_main.c  snn_main.c
src/src/: Makefile.am
src/statistics/: Makefile.am  band_minmax.c  histoMeanStd_main.c
src/sunraster/: Makefile.defs  sunraster2biff_main.c
src/texture/: glRunLength_main.c
src/thin/: Makefile.am  Makefile.defs  thn_har_main.c  thn_zs_main.c
src/thresMl/: Makefile.defs  thresMlCentroid_main.c  thresMlComCur_main.c  thresMlWaHa_main.c  thresMl_main.c
src/threshold/: thresLloyd_main.c  thresMinErr_main.c  thresPtile_main.c  thresSigma_main.c  thresUniErr_main.c  threshold_main.c
src/tiff/: Makefile.defs  biff2tiff_main.c
src/ximage/: Makefile.defs  ximage_example_main.c
src/xpm/: Makefile.defs
src/xshow/: Macro.c  MenuBox.h  MenuBoxP.h  MenuCommand.c  MenuCommand.h  MenuCommandP.h  SubMenuCommandP.h  XawMisc.h  Xcontrol.h  Xdisplay.h  Xprog.h  xshowImageOptionsMenu.c  xshowImageOptionsMenu.h
src/zernike/: Makefile.am
(+1407 files in other folders)
