#
#      Makefile.am for lib/extrema
#


@SET_MAKE@

SHELL = /bin/sh

include $(top_srcdir)/Makefile.def

#
#   Makefile definitions
#

noinst_LTLIBRARIES = libxiteextrema.la

MANF =  extrema1.3 extrema2.3 maxima.3 minima.3

man3_MANS=$(MANF)

libxiteextrema_la_SOURCES = extrema1.c extrema2.c minima.c maxima.c
