#
#      Makefile.am for lib/minmax
#


@SET_MAKE@

SHELL = /bin/sh

include $(top_srcdir)/Makefile.def

#
#   Makefile definitions
#

noinst_LTLIBRARIES = libxiteminmax.la

MANF =  closestMinMax.3 maxarea.3 minarea.3

man3_MANS=$(MANF)

libxiteminmax_la_SOURCES = closestMinMax.c maxarea.c minarea.c
